# basilisk-thermal

./: .gitignore
src/: CMakeLists.txt  setup.py.in  thermal.i  thermalConductor.cpp  thermalConductor.h  thermalConstants.h  thermalTypes.h
src/include/thermal/: thermal.i  thermalConstants.h  thermalTypes.h
src/include/thermal/messages/: BetaAngleMsg.h  ConductanceMsg.h  HeatRateMsg.h  SolarAngleMsg.h  TemperatureMsg.h
src/include/thermal/models/: ArithmeticEmitter.h  ArithmeticSurface.h  BetaAngle.h  FluxHeating.h  HeatPath.h  HeatSource.h  NetworkConductor.h  NetworkEmitter.h  NetworkMass.h  NetworkMass2.h  NetworkRadiationConductor.h  NetworkSolver.h  RadiationConductor.h  SolarAngle.h  ThermalConductor.h  ThermalEmitter.h  ThermalMass.h  betaAngle.h  fluxHeating.h  solarHeating.h  thermalConductor.h  thermalEmitter.h  thermalMass.h
src/messages/: HeatRateMsg.h  TemperatureMsg.h
src/models/: ArithmeticEmitter.cpp  ArithmeticSurface.cpp  BetaAngle.cpp  FluxHeating.cpp  HeatPath.cpp  HeatSource.cpp  NetworkConductor.cpp  NetworkEmitter.cpp  NetworkMass.cpp  NetworkMass2.cpp  NetworkRadiationConductor.cpp  NetworkSolver.cpp  RadiationConductor.cpp  SolarAngle.cpp  ThermalConductor.cpp  ThermalEmitter.cpp  ThermalMass.cpp  betaAngle.cpp  fluxHeating.cpp  heatSource.cpp  solarHeating.cpp  test_betaAngle.py  test_fluxHeating.py  test_solarHeating.py  test_thermalConductor.py  test_thermalEmitter.py  test_thermalMass.py  thermalConductor.cpp  thermalConductor.h  thermalEmitter.cpp  thermalEmitter.h  thermalMass.cpp  thermalMass.h
tests/: test_ArithmeticSurface.py  test_HeatSource.py  test_NetworkMass2.py  test_NetworkSolver.py  test_betaAngle.py  test_fluxHeating.py  test_thermalConductor.py  test_thermalEmitter.py  test_thermalMass.py
